# ffgl-rs

./: .gitignore  .gitmodules  CHANGELOG.md  Cargo.toml  LICENSE  README.md  build.rs  bulk_isf_to_resolume.sh  daw.entitlements  deploy_bundle.sh  deploy_bundle_to_resolume.sh  ffgl2_wrapper.h  ffgl_run_resolume.sh  fixfmt.sh  init_resolume_allow_debugging_macos.sh  isf_to_plugin.sh  resolume.sh  run.sh  run_resolume.sh  shadertoy_run_resolume.sh  validate_isf.sh  vdmx.sh  wrapper.h
.cargo/: config.toml
.github/: copilot-instructions.md
build-common/: Cargo.toml
build-common/src/: glsl_120.rs  glsl_140plus.rs  glsl_output.rs  isf_glsl_preprocess.rs  isf_prefix.glsl  isf_prefix_120.glsl  isf_prefix_140.glsl  lib.rs  prefix.glsl
example/: Cargo.toml  build.rs
example-isf/: Cargo.toml  build.rs  bulk_deploy_isf.sh  bulk_isf_to_resolume.sh  deploy_isf.sh  isf_to_resolume.sh
example-isf/isf-extras/: ASCII_art.fs  CMYK Halftone-Lookaround.fs  alpha_mosh.fs  bitstream.fs  crt.fs  dotlinefield.fs  fractal_sponge.fs  hsv.fs  hsvPosterise.fs  into_the_menger.fs  life.fs  magic_fractals.fs  simply_nebulous.fs  time_glitch.fs  vhs_glow.fs  viscous_finger_noise.fs
example-isf/src/: handler.rs  instance.rs  lib.rs  param.rs  shader.rs  util.rs
example-isf/src/fullscreen_shader/: mod.rs
example-raw/: Cargo.toml  run.sh
example-raw/src/: lib.rs  shader_helper.rs  test_empty.rs  test_gl.rs  validate.rs
example-sdfer/: Cargo.toml
example-sdfer/src/: lib.rs
example/src/: gl.rs  lib.rs  shader_helper.rs  test_empty.rs  test_gl.rs
ffgl-core/: Cargo.toml  README.md  build.rs
ffgl-core/src/: callback.rs  conversions.rs  entry.rs  handler.rs  handler_macro.rs  info.rs  inputs.rs  instance.rs  lib.rs  log.rs  param_handler.rs  parameters.rs  plugin_main.rs  traits.rs
ffgl-core/src/ffi/: ffgl1.rs  ffgl2.rs  mod.rs  util.rs
ffgl-core/src/handler/: mod.rs  simplified.rs
ffgl-core/src/parameters/: builtin.rs  handler.rs  info.rs  mod.rs
ffgl-glium/: Cargo.toml
ffgl-glium/src/: gl_backend.rs  glsl.rs  lib.rs  texture.rs  validate_gl.rs
ffgl-isf/: Cargo.toml  bulk_deploy_isf.sh  deploy_isf.sh
ffgl-isf/isf-extras/: Acid_jelly.fs  Another_Cloudy_Tunnel_2_XlSSzV.fs  BlackCherryCosmos.fs  CMYK Halftone-Lookaround.fs  Chladni_Cymatics_9_symmetry_salt_ttXXD8.fs  DiamondVision.fs  Digital_Brain_4sl3Dr.fs  Dynamism_MtKSWW.fs  Fractal_Audio_01_llB3W1.fs  Into_The_Sponge_XssGRs.fs  Laplacian_warped_flow_noise_ml3cDj.fs  LiquidMetal.fs  Noise.fs  Reaction_Diffusion-Acid_trip_XdlfWj.fs  Realtime_Datamoshing_mlGfDh.fs  Remnant_X_4sjSW1.fs  Saddinger's_csyXzd.fs  Stochastic_zoom_feedback_loop_XcjBWW.fs  Truchet_Tentacles_ldfGWn.fs  VHS_Compression_tsfXWj.fs  VHS_glitch.fs  Video_Gas_tdffDN.fs  Viscous_Fingering_Xst3Dj.fs  Warp_speed_Msl3WH.fs  acid_diffusion.fs  alpha_mosh.fs  blobscillator.fs  cloudy-tunnel-2.fs  cymatics.fs  disco_star_speed.fs  dynamism.fs  fur_space.fs  generative_art_deco_4_mds3DX.fs  gentle_rings.fs  ids_animate.fs  into_the_menger.fs  laplacian_warped_noise.fs  menger_n_chill.fs  moire.fs  polychora.fs  (+14 more)
ffgl-isf/projectileobjects-MiscISFShaders/: 301's_Fire_Shader-Remix_GPT_Modified.fs  A_Rose_is_a_Rose_is_a_Rose_WttBRl.fs  Analog Glitch 9.fs  Angry Eyeball_Blink.fs  Crop and Feather V4 (P.O.).fs  Crop and Feather V7 (P.O.).fs  Cube Map 2.fs  Disable RGB.fs  Disco Spinner.fs  Dubstep_my_ass!_MsXGR2.fs  Eyeball_Simple.fs  Feedback Trace v.3.fs  Feedback Trace v.5.fs  GridMove.fs  HeatMap.fs  LICENSE  LaserCircle v2.fs  LaserCircle v3.fs  LaserCircle.fs  LaserShader_01.fs  LaserShader_02.fs  Line Move Alpha V1 (P.O.).fs  Old Film.fs  PerlinNoiseShader.fs  Quasi_Infinite_Zoom_Voronoi__XlBXWw.fs  Simple_EyeBalls.fs  Simple_LoDless_Volumetric_Clouds_wsjfRD.fs  Texture_Displace.fs  Texture_Displace_02.fs  The_road_to_Hell_Mds3Rn.fs  VHS Chaos Master Github.fs  Zebra_Lines_ProjectileObjects.fs
ffgl-isf/src/: handler.rs  instance.rs  lib.rs  param.rs  shader.rs  util.rs
ffgl-isf/src/fullscreen_shader/: fullscreen.vert  mod.rs
ffgl-raw/: Cargo.toml  build.rs
ffgl-raw/src/: conversions.rs  ffgl_derive.rs  instance.rs  lib.rs  log.rs  parameters.rs  traits.rs  validate.rs
ffgl-raw/src/ffi/: ffgl.rs  ffgl1.rs  ffgl2.rs  mod.rs
shadertoy/: Cargo.toml
shadertoy/src/: lib.rs  test.rs
src/: conversions.rs  ffgl2.rs  ffgl_derive.rs  ffgl_plugin_host.rs  instance.rs  lib.rs  log.rs  nenum_derive.rs  parameters.rs  renderer.rs  test_gl.rs  validate.rs
src/ffi/: gl.rs  mod.rs
