# [package]
# name = "ffgl"
# version = "0.1.2"
# edition = "2021"

[workspace.package]
authors = ["Edward Taylor <dev@edt.nz>"]
license = "	GPL-3.0-or-later"

[workspace]
resolver = "2"
members = ["example-raw", "ffgl-glium", "ffgl-raw"]
default-members = ["ffgl-raw", "ffgl-glium"]

# [lib]
# crate-type = ["lib"]
# panic = "abort"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
gl = "0.14.0"
itertools = "0.12.0"


[profile.release]
panic = 'abort'
