[workspace.package]
authors = ["Edward Taylor <dev@edt.nz>"]
license = "	GPL-3.0-or-later"
homepage = "https://github.com/edeetee/ffgl-rs"
repository = "https://github.com/edeetee/ffgl-rs"

[workspace]
resolver = "2"
members = [
    "example-raw",
    "ffgl-glium",
    "ffgl-core",
    "ffgl-isf",
    "build-common",
    "example-sdfer", "shadertoy",
]
default-members = ["ffgl-core"]


# [lib]
# crate-type = ["lib"]
# panic = "abort"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
gl = "0.14.0"
itertools = "0.12.0"
glium = "0.33.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing = { version = "0.1.40", features = ["log"] }
anyhow = "1.0.79"

[profile.release]
panic = 'abort'
