[package]
name = "build-common"
version = "0.1.0"
edition = "2021"
authors.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
isf = "0.1.0"
glsl = "6.0.1"

[lib]
name = "build_common"
path = "src/lib.rs"

[[bin]]
name = "isf_validator"
path = "src/bin/isf_validator.rs"
