[package]
name = "example-isf"
version = "0.1.0"
edition = "2021"
license.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glium.workspace = true
ffgl-glium = { path = "../ffgl-glium" }
glsl = "6.0.1"
genmesh = "0.6.2"
isf = "0.1.0"
thiserror = "1.0.50"
serde = { version = "1.0.130", features = ["derive"] }
once_cell = "1.18.0"
rng = "0.1.0"
rand = "0.8.5"

[build-dependencies]

isf = "0.1.0"
uneval = "0.2.4"

[lib]
crate-type = ["cdylib"]
# panic = "abort"
