[package]
name = "example-isf"
version = "0.1.0"
edition = "2021"
license.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glium.workspace = true
anyhow.workspace = true

ffgl-glium = { path = "../ffgl-glium" }
ffgl-core = { path = "../ffgl-core" }

isf = "0.1.0"
genmesh = "0.6.2"
thiserror = "1.0.50"
serde = { version = "1.0.130", features = ["derive"] }
rng = "0.1.0"
rand = "0.8.5"
rand_seeder = "0.2.3"
tracing.workspace = true
build-common = { path = "../build-common" }

[build-dependencies]
build-common = { path = "../build-common" }

[lib]
crate-type = ["cdylib"]
# panic = "abort"
