[package]
name = "ffgl_example"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]
panic = "abort"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ffgl = { path = "../ffgl-raw" }
gl = { version = "0.14.0" }
gl_loader = "0.1.0"

[build-dependencies]
gl_generator = "0.14.0"
