[package]
name = "example-sdfer"
version = "0.1.0"
edition = "2021"
authors.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ffgl-glium = { path = "../ffgl-glium" }
ffgl-core = { path = "../ffgl-core" }
sdfer = "0.2.1"
glium.workspace = true
