[package]
license.workspace = true
authors.workspace = true
readme.workspace = true
repository.workspace = true
homepage.workspace = true
name = "ffgl-core"
version = "0.2.2"
edition = "2021"
description = "FFGL plugin framework"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.4"
num-derive = "0.4.0"
num-traits = "0.2"
gl.workspace = true

once_cell = "1.19.0"
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow = "1.0.79"

[build-dependencies]
bindgen = "0.63.0"
cfg-if = "1.0.0"


# [profile.release]
# panic = 'abort'
