[package]
name = "ffgl-glium"
version = "0.1.0"
edition = "2021"
license.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gl.workspace = true
ffgl-raw = { path = "../ffgl-raw" }
gl_loader = "0.1.2"
glium.workspace = true
