[package]
name = "ffgl-glium"
version = "0.1.0"
edition = "2021"
license.workspace = true
authors.workspace = true
description = "FFGL plugin utilities for using glium"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gl.workspace = true
ffgl-core = { path = "../ffgl-core" }
gl_loader = "0.1.2"
glium.workspace = true
tracing.workspace = true
