[package]
license.workspace = true
authors.workspace = true
readme.workspace = true
repository.workspace = true
homepage.workspace = true
name = "ffgl-glium"
version = "0.1.2"
edition = "2021"
description = "FFGL plugin utilities for using glium"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gl.workspace = true
ffgl-core = { path = "../ffgl-core", version = "0.2.6" }
gl_loader = "0.1.2"
glium.workspace = true
tracing.workspace = true
