[package]
name = "shadertoy"
version = "0.1.0"
edition = "2024"
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
isf = "0.1.0"
genmesh = "0.6.2"
thiserror = "1.0.50"
serde = { version = "1.0", features = ["derive"] }
rng = "0.1.0"
rand = "0.8.5"
rand_seeder = "0.2.3"
tracing.workspace = true
build-common = { path = "../build-common" }
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde_json = "1.0"
regex = "1.8"
url = "2.3"
lazy_static = "1.4"
clap = { version = "4.5.37", features = ["env", "derive"] }
tokio = { version = "1.28", features = ["full"] }
dotenv = "0.15.0"

[build-dependencies]
build-common = { path = "../build-common" }

[lib]
name = "shadertoy"

[[bin]]
name = "shadertoy"
path = "bin/shadertoy_to_isf.rs"
